# learning-llm-engineering

./: .gitignore  README.md  day1.ipynb  day2.ipynb  day2_parser.ipynb  day3.ipynb  day3_adv_conv.ipynb  day4.ipynb  day4_gradio.ipynb  day5.ipynb  day5_hf_pipelines.ipynb  day6.ipynb  day6_tokenization.ipynb  day7.ipynb  day8_code_generator.ipynb  linkedin_post.md  main.ipynb  pyproject.toml
.gradio/flagged/: dataset1.csv
