[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "mistralai>=1.9.11",
    "openai>=2.1.0",
    "requests>=2.32.5",
]
