[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "gradio>=5.49.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "mistralai>=1.9.11",
    "openai>=2.1.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "torch>=2.9.1",
    "accelerate>=1.11.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
